# Backend

./: .env  .gitignore  Cargo.toml  README.md  package-lock.json
anyhow_response_error/: Cargo.toml
anyhow_response_error/src/: lib.rs
db/migrations/: 1_init.db
src/: database.rs  handlers.rs  main.rs
src/handlers/: device.rs  push.rs  test.rs  upload.rs  user.rs
