[package]
name = "Backend"
version = "0.1.0"
edition = "2021"

[dependencies]
sqlx = { version = "0.8.3", features = [
    "runtime-tokio",
    "tls-rustls",
    "sqlite",
] }
dotenvy = "0.15"
tokio = { version = "1", features = ["full"] }
once_cell = "1.20.2"
actix-web = "4.0.0-beta.8"
anyhow = "1.0.95"
thiserror = "2.0.9"
anyhow_response_error = { path = "./anyhow_response_error" }
serde = { version = "1.0.217", features = ["derive"] }
actix-multipart = "0.7.2"
serde_json = "1.0.134"
bcrypt = "0.16.0"
openssl = "0.10"
openssl-sys = { version = "0.9.104", features = ["vendored"] }
actix-cors = "0.7.0"
env_logger = "0.11.6"
log = "0.4.22"
reqwest = { version = "0.12.12", features = ["json"] }
web-push="0.10.2"
chrono = { version = "0.4.19", features = ["serde"] }
[dependencies.uuid]
version = "1.11.0"
features = [
    "v4",
    "fast-rng",
    "macro-diagnostics",
]
